--- a/themes/custom-theme/static/css/styles.css
+++ b/themes/custom-theme/static/css/styles.css
@@ -125,3 +125,39 @@ a:hover {
 .go-to-project:hover {
     background-color: #005a8e;
 }
+
+/* Mobile styles */
+@media (max-width: 768px) {
+    .project-box {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .project-image {
+        margin-right: 0;
+        margin-bottom: 1rem;
+    }
+
+    .project-content {
+        text-align: center;
+        width: 100%;
+    }
+
+    .project-links {
+        margin-top: 1rem;
+    }
+}
+
+/* Desktop styles */
+@media (min-width: 769px) {
+    .project-box {
+        display: flex;
+        align-items: center;
+    }
+
+    .project-content {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+}
