--- a/themes/custom-theme/layouts/_default/baseof.html
+++ b/themes/custom-theme/layouts/_default/baseof.html
@@ -16,5 +16,11 @@
         {{ block "main" . }}{{ end }}
     </main>
 
+    <div style="text-align: center; font-family: Arial, sans-serif;">
+    <p>Copyright 2023, Tate Wilhelm; All Rights Reserved.</p>
+    <p>But let's be honest here, you can mess around with the code if you want. IDC.</p>
+</div>
 </body>
 </html>
+
+<script src="/js/filter.js"></script>
